표 검색창, 페이지 줄 수 창 스타일 변경

--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -168,13 +168,15 @@
         <tr>
             <td>MemberList</td>
             <td>
+                <p>고객관리시스템 / 고객목록</p>
                 <a class="text-primary" asp-area="" asp-controller="ManagerMember" asp-action="MemberList">/manager/member/MemberList.html</a>
             </td>
         </tr>
         <tr>
             <td>MemberDetailVeiw</td>
             <td>
-                <a class="text-dark" asp-area="" asp-controller="ManagerMember" asp-action="MemberDetailView">/manager/member/MemberDetailView</a>
+                <p>고객관리시스템 / 상세보기</p>
+                <a class="text-dark" asp-area="" asp-controller="ManagerMember" asp-action="MemberDetailView">/manager/member/MemberDetailView.html</a>
             </td>
         </tr>
         <tr>
