--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisClass.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisClass.cshtml
@@ -6,6 +6,25 @@
     ViewData["Title"] = "기준정보 관리/진단 종류";
     @model Ki4C_Solution.Models.Manager.StandardInfoMgr.DiagnosisClass;
 }
+<style>
+    #DiagnosisClassList_filter > label > input {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 2px;
+    }
+
+    #DiagnosisClassList_length > label > select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    }
+</style>
 <!-- 섹션 -->
 <section>
     <!-- 콘텐츠 -->
@@ -336,6 +355,8 @@
         DiagnosisClassJS.init();
         DiagnosisClassJS.DiagnosisTypeList();
         DiagnosisClassJS.DiagnosisClassList();
+        const searchBox = document.querySelector("#DiagnosisClassList_filter label input");
+        searchBox.placeholder = "검색어 입력";
     });
 
 
