--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationArea.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationArea.cshtml
@@ -7,6 +7,25 @@
     @model Ki4C_Solution.Models.Manager.StandardInfoMgr.DiagnosisEvaluationArea;
 }
 <!-- 섹션 -->
+<style>
+    #DiagnosisEvaluationAreaList_filter > label > input {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 2px;
+    }
+
+    #DiagnosisEvaluationAreaList_length > label > select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    }
+</style>
 <section>
     <!-- 콘텐츠 -->
     <div id=contetns style="width: 100%;">
