--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationMeasurement.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationMeasurement.cshtml
@@ -6,18 +6,38 @@
     ViewData["Title"] = "기준정보 관리/진단 종류";
 }
 <style>
-/* DiagnosisEvaluationMeasurement.html */
-#table {
-    border: "1";
-    width: 800px; height: 100px;
-    text-align: center;
-    background-color:skyblue; border-color: white;
-}
-@@media (max-width: 768px){
+    /* DiagnosisEvaluationMeasurement.html */
     #table {
-        width: 100%;
+        border: "1";
+        width: 800px;
+        height: 100px;
+        text-align: center;
+        background-color: skyblue;
+        border-color: white;
     }
-}
+
+    @@media (max-width: 768px) {
+        #table {
+            width: 100%;
+        }
+    }
+    #DiagnosisEvaluationMeasurementList_filter > label > input {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 2px;
+    }
+
+    #DiagnosisEvaluationMeasurementList_length > label > select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    }
 </style>
 <!-- 섹션 -->
 <section>
