--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationQnA.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationQnA.cshtml
@@ -21,27 +21,27 @@
         position: relative;
     }
 
-    input[type="checkbox"]::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 1.2em;
-        color: #2B92D5;
-        opacity: 0;
-        transition: opacity 0.2s;
-    }
+        input[type="checkbox"]::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 1.2em;
+            color: #2B92D5;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
 
-    input[type="checkbox"]:checked {
-        border-color: #2B92D5;
-        transform: scale(1.2);
-    }
+        input[type="checkbox"]:checked {
+            border-color: #2B92D5;
+            transform: scale(1.2);
+        }
 
-    input[type="checkbox"]:checked::before {
-        opacity: 1;
-        content: "\2714";
-    }
+            input[type="checkbox"]:checked::before {
+                opacity: 1;
+                content: "\2714";
+            }
 
     .dataTables_paginate .paginate_button {
         border: 2px solid #ccc;
@@ -59,58 +59,23 @@
             border-color: #2B92D5;
         }
 
-    .dataTables_filter input[type="search"] {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        width: 100%;
-        height: 2.5em;
-        border: 2px solid #ccc;
-        border-radius: 0.25em;
-        outline: none;
-        transition: all 0.2s;
-        padding: 0.5em;
+    #DiagnosisEvaluationQuestionList_filter > label > input {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 2px;
     }
 
-        .dataTables_filter input[type="search"]:focus {
-            border-color: #2B92D5;
-        }
-
-    .dataTables_length select {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        width: 1000px;
-        /*width: 1.5em;
-        height: 1.5em;*/
-        border: 2px solid #ccc;
-        border-radius: 0.25em;
-        outline: none;
-        transition: all 0.2s;
-        margin-right: 0.5em;
-        position: relative;
+    #DiagnosisEvaluationQuestionList_length > label > select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
     }
-
-        .dataTables_length select::before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 1.2em;
-            color: #2B92D5;
-            opacity: 0;
-            transition: opacity 0.2s;
-        }
-
-        .dataTables_length select:focus {
-            border-color: #2B92D5;
-        }
-
-            .dataTables_length select:focus::before {
-                opacity: 1;
-                content: "\25BC";
-            }
 </style>
 <!-- 섹션 -->
 <section>
