--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -180,44 +180,51 @@
             </td>
         </tr>
         <tr>
+            <td>DiagnosisType</td>
+            <td>
+                <p>기준 정보 / 진단 종류</p>
+                <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisType">/manager/StandardInforMgr/DiagnosisType</a>
+            </td>
+        </tr>
+        <tr>
             <td>DiagnosisClass</td>
             <td>
+                <p>기준 정보 / 진단 구분</p>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisClass">/manager/StandardInforMgr/DiagnosisClass</a>
             </td>
         </tr>
         <tr>
             <td>DiagnosisEvaluationArea</td>
             <td>
+                <p>기준 정보 / 진단 평가영역</p>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationArea">/manager/StandardInforMgr/DiagnosisEvaluationArea</a>
-            </td>
-        </tr>
-        <tr>
-            <td>DiagnosisEvaluationMeasurement</td>
-            <td>
-                <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationMeasurement">/manager/StandardInforMgr/DiagnosisEvaluationMeasurement</a>
             </td>
         </tr>
         <tr>
             <td>DiagnosisEvaluationQnA</td>
             <td>
+                <p>기준 정보 / 진단 평가문제와 지문</p>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationQnA">/manager/StandardInforMgr/DiagnosisEvaluationQnA</a>
             </td>
         </tr>
         <tr>
             <td>DiagnosisInputType</td>
             <td>
+                <p>기준 정보 / 진단 입력형식</p>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisInputType">/manager/StandardInforMgr/DiagnosisInputType</a>
             </td>
         </tr>
         <tr>
-            <td>DiagnosisType</td>
+            <td>DiagnosisEvaluationMeasurement</td>
             <td>
-                <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisType">/manager/StandardInforMgr/DiagnosisType</a>
+                <p>기준 정보 / 진단 평가영역</p>
+                <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationMeasurement">/manager/StandardInforMgr/DiagnosisEvaluationMeasurement</a>
             </td>
         </tr>
         <tr>
             <td>DiagnosisLevel</td>
             <td>
+                <p>기준 정보 / 진단 수준</p>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisLevel">/manager/StandardInforMgr/DiagnosisLevel</a>
             </td>
         </tr>
