--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisType.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisType.cshtml
@@ -13,13 +13,13 @@
         border: solid 0.5px #2B92D5;
         border-radius: 10px;
         padding: 2px;
+        margin-right: 5px;
     }
 
     #DiagnosisTypeList_length > label > select {
         width: 150px;
-        height: 20px;
+        height: 25px;
         padding: 3px;
-        margin-top: 10px;
         border: solid 0.3px #34B0C7;
         border-radius: 0.5em;
         box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
@@ -67,49 +67,12 @@
         <hr />
         <!-- 진단 종류 목록 -->
         <div style="display: inline-block;">
-            <div id="buttonLocation">
-                <input class="inputType1" type="text" placeholder="검색어 입력" />
-                <button class="btnType1" id="searchButton">검색</button>
-            </div>
             <br>
             <div style="width: 90%; margin: auto;">
-                @*                <table id="table">
-                        <tr align="center" bgcolor="skyblue">
-                            <td>번호</td>
-                            <td>진단종류코드</td>
-                            <td>진단종류명</td>
-                            <td>삭제</td>
-                        </tr>
-                        <tr align="center" bgcolor="white">
-                            <td>1</td>
-                            <td>A1</td>
-                            <td>기업 기초 정보</td>
-                            <td><input type="checkbox"></td>
-                        </tr>
-                        <tr align="center" bgcolor="white">
-                            <td>2</td>
-                            <td>A2</td>
-                            <td>자체 진단</td>
-                            <td><input type="checkbox"></td>
-                        </tr>
-                        <tr align="center" bgcolor="white">
-                            <td>3</td>
-                            <td>A3</td>
-                            <td>전문가 진단</td>
-                            <td><input type="checkbox"></td>
-                        </tr>
-                        <tr align="center" bgcolor="white">
-                            <td>4</td>
-                            <td>A4</td>
-                            <td>기타</td>
-                            <td><input type="checkbox"></td>
-                        </tr>
-                    </table>*@
-                <table class="display" id="DiagnosisTypeList">
-                </table>
+                <table class="display" id="DiagnosisTypeList"></table>
             </div>
             <div id="buttonLocation">
-                <input class="inputType2" id="deleteButton" type="submit" value="항목 삭제" />
+                <input class="btnType2" id="deleteButton" type="submit" value="항목 삭제" />
             </div>
         </div>
         <!-- 진단 종류 목록 -->
@@ -302,4 +265,29 @@
     $(document).ready(function () {
         DIagnosisTypeJS.init();
         DIagnosisTypeJS.DiagnosisTypeList();
-    });</script>
+
+        const tableName = 'DiagnosisTypeList'
+        const insideTable = document.querySelector(`#${tableName}`);
+        if (matchMedia("screen and (min-width: 768px)").matches) {
+            // 768px 이상에서 사용할 JavaScript
+            insideTable.style.width = "700px";
+        } else {
+            // 768px 미만에서 사용할 JavaScript
+            insideTable.style.width = "350px";
+        }
+        insideTable.style.padding = "5px";
+
+        const search = document.querySelector(`#${tableName}_filter`);
+        //const searchLabel = document.querySelector(`#${tableName}_filter label`);
+        //searchLabel.innerText = searchLabel.innerText.replace("검색:", "");
+        const button = document.createElement("button");
+        button.classList.add("btnType1");
+        button.id = "searchButton";
+        button.innerText = "검색";
+        search.appendChild(button);
+
+        const searchBox = document.querySelector(`#${tableName}_filter label input`);
+        searchBox.placeholder = "검색어 입력";
+
+    });
+</script>
