--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -1,5 +1,5 @@
 ﻿<style>
-    #table {
+    /*    #table {
         border: "1";
         width: 800px;
         height: 100px;
@@ -7,7 +7,7 @@
         background-color: #34B0C7;
         border-color: white;
         table-layout: fixed;
-    }
+    }*/
 
     td {
         font-size: 14px;
@@ -18,6 +18,7 @@
         color: white;
         font-weight: 700;
     }
+
     #mypageButton {
         width: 70px;
         height: 20px;
@@ -39,12 +40,17 @@
         border: none;
         border-radius: 30px;
     }
+
     #searchBox {
-        width: 130px; height: 30px;
+        width: 130px;
+        height: 30px;
     }
-    #buttonLocation {
-        float: right; margin-right: -50px;
+
+    #buttonLocation, #DiagnosisTypeList_filter {
+        float: right;
+        margin-right: -50px;
     }
+
     #menuBox {
         padding: 5px;
         width: 90%;
@@ -90,6 +96,7 @@
         .menu a {
             padding-left: 10px;
         }
+
     .inputType1 {
         width: 150px;
         height: 25px;
@@ -97,6 +104,7 @@
         border-radius: 10px;
         padding: 2px;
     }
+
     .inputType2 {
         width: 500px;
         height: 25px;
@@ -104,6 +112,7 @@
         border-radius: 10px;
         padding: 2px;
     }
+
     .btnType1 {
         font-size: 14px;
         font-weight: 500;
@@ -135,16 +144,20 @@
         border-radius: 0.5em;
         box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
     }
-    @@media (max-width: 768px){
+
+    @@media (max-width: 768px) {
         #table {
             width: 100%;
         }
+
         #searchBox {
             width: 100px;
         }
+
         #buttonLocation {
             margin-right: 10px;
         }
+
         .inputType2 {
             width: 150px;
         }
