--- a/Ki4C_Solution/wwwroot/css/style.css
+++ b/Ki4C_Solution/wwwroot/css/style.css
@@ -1,16 +1,30 @@
 /* 기본 설정 */
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
+
 body {
     background: #fafafa;
     font-family: 'NanumSquare', sans-serif;
 }
-#wrap {width: 1200px; margin: 0 auto;}
-header {width: 100%; height: 100px; background: #fafafa;}
+
+#wrap {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    background: #fafafa;
+}
+
 aside {
     float: left;
-    width: 200px; height: 700px;
+    width: 200px;
+    height: 700px;
     padding: 20px 10px 10px 10px;
-    background: #fafafa;}
+    background: #fafafa;
+}
+
 section {
     float: left;
     width: calc( 100% - 260px );
@@ -20,12 +34,14 @@ section {
     background: #f2f2f2;
     display: flex;
 }
+
 footer {
     clear: both;
     width: 100%;
     height: 200px;
     background: #2A3142;
 }
+
 #nav_2 {
     display: none;
 }
@@ -52,18 +68,34 @@ footer {
     color: white;
 }
 
+
 /* 화면 너비 0 ~ 768px */
-@media (max-width: 768px){
-    #wrap {width: 100%;}
-    header {height: 50px;}
-    aside {display: none;}
-    section {width: 90%; min-height: 600px;}
+@media (max-width: 768px) {
+    #wrap {
+        width: 100%;
+    }
+
+    header {
+        height: 50px;
+    }
+
+    aside {
+        display: none;
+    }
+
+    section {
+        width: 90%;
+        min-height: 600px;
+    }
+
     #menu {
         display: none;
     }
+
     #nav_2 {
         display: block;
     }
+
     #menuIdx {
         font-size: 12px;
     }
@@ -74,3 +106,110 @@ footer {
         padding-top: 3px;
     }
 }
+
+/* 테이블 기본 설정 */
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 1.5em;
+    height: 1.5em;
+    border: 2px solid #ccc;
+    border-radius: 0.25em;
+    outline: none;
+    transition: all 0.2s;
+    margin-right: 0.5em;
+    position: relative;
+}
+
+    input[type="checkbox"]::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.2em;
+        color: #2B92D5;
+        opacity: 0;
+        transition: opacity 0.2s;
+    }
+
+    input[type="checkbox"]:checked {
+        border-color: #2B92D5;
+        transform: scale(1.2);
+    }
+
+        input[type="checkbox"]:checked::before {
+            opacity: 1;
+            content: "\2714";
+        }
+
+.dataTables_paginate .paginate_button {
+    border: 2px solid #ccc;
+    /*    background-color: #fff;*/
+    background-color: red;
+    color: #2B92D5;
+    border-radius: 0.25em;
+    padding: 0.5em 1em;
+    margin-right: 0.5em;
+    transition: all 0.2s;
+}
+
+    .dataTables_paginate .paginate_button:hover {
+        background-color: #2B92D5;
+        color: #fff;
+        border-color: #2B92D5;
+    }
+
+.dataTables_filter input[type="search"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 2.5em;
+    border: 2px solid #ccc;
+    border-radius: 0.25em;
+    outline: none;
+    transition: all 0.2s;
+    padding: 0.5em;
+}
+
+    .dataTables_filter input[type="search"]:focus {
+        border-color: #2B92D5;
+    }
+
+.dataTables_length select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 1000px;
+    /*width: 1.5em;
+        height: 1.5em;*/
+    border: 2px solid #ccc;
+    border-radius: 0.25em;
+    outline: none;
+    transition: all 0.2s;
+    margin-right: 0.5em;
+    position: relative;
+}
+
+    .dataTables_length select::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.2em;
+        color: #2B92D5;
+        opacity: 0;
+        transition: opacity 0.2s;
+    }
+
+    .dataTables_length select:focus {
+        border-color: #2B92D5;
+    }
+
+        .dataTables_length select:focus::before {
+            opacity: 1;
+            content: "\25BC";
+        }
