--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -161,6 +161,9 @@
         .inputType2 {
             width: 150px;
         }
+        select {
+            width: 130px;
+        }
     }
 </style>
 <aside>
