--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisClass.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisClass.cshtml
@@ -24,6 +24,18 @@
         border-radius: 0.5em;
         box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
     }
+
+    #DiagnosisClassList_paginate {
+        float: left;
+        margin-left: 25%;
+    }
+
+    @@media (max-width: 768px) {
+        #DiagnosisClassList_paginate {
+            float: left;
+            margin-left: 15%;
+        }
+    }
 </style>
 <!-- 섹션 -->
 <section>
