--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationArea.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationArea.cshtml
@@ -25,6 +25,18 @@
         border-radius: 0.5em;
         box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
     }
+
+    #DiagnosisEvaluationAreaList_paginate {
+        float: left;
+        margin-left: 25%;
+    }
+
+    @@media (max-width: 768px) {
+        #DiagnosisEvaluationAreaList_paginate {
+            float: left;
+            margin-left: 15%;
+        }
+    }
 </style>
 <section>
     <!-- 콘텐츠 -->
@@ -44,7 +56,7 @@
         <br>
         <hr style="width: 100%" />
         <!-- 진단 평가영역 등록 -->
-        <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
+        <div style="padding-top: 30px; padding-left: 30px; height: 250px;">
             <a>진단구분선택: </a>
             <div style="padding-top: 10px; padding-left: 32px; display: inline-block;">
                 <select style="max-width: 400px; width: 130%; height: 30px; font-size: 16px;
