--- a/Ki4C_Solution/Views/Member/Diagnosis/SelectedResultList.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelectedResultList.cshtml
@@ -1,6 +1,6 @@
 @{
     Layout = "~/Views/Shared/_LayoutKi4C_Aside_dg_mgnt.cshtml";
-    ViewData["Title"] = "기준정보 관리/진단 종류";
+    ViewData["Title"] = "진단평가/선정기업 목록";
 }
 <style>
     select {
