--- a/Ki4C_Solution/Views/Member/Diagnosis/DiagnosisFinished.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/DiagnosisFinished.cshtml
@@ -13,12 +13,15 @@
         margin: auto;
         font-size: 26px; font-weight: 700;
     }
-    #confirmButton{
-        font-size: 16px; font-weight: 600;
-        background-color: black;
+    .btnType1 {
+        font-size: 14px;
+        font-weight: 500;
         color: white;
+        background-color: #2B92D5;
         border: none;
-        width: 130px; height: 40px;
+        width: 80px;
+        height: 30px;
+        border-radius: 20px;
     }
     @@media (max-width: 768px){
         #box-form {
@@ -37,7 +40,7 @@
             </p>
         </div>
         <div class="contents" style="display: flex; justify-content: center;">   
-            <button id="confirmButton" type="button" onClick="location.href='/Home/Index'">
+            <button class="btnType1" id="confirmButton" type="button" onClick="location.href='/Home/Index'">
                 확인
             </button>
         </div>
