--- a/Ki4C_Solution/Views/Member/Mypage/DXSelfDiagnosisDetailView.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/DXSelfDiagnosisDetailView.cshtml
@@ -77,6 +77,9 @@
         #requestData {
             display: inline;
         }
+        .btnType1 {
+            width: 100px;
+        }
     }
 </style>
 <!-- 섹션 -->
@@ -99,11 +102,13 @@
         <br>
         <hr style="width: 100%;" />
         <!-- DX 자체 진단 결과 보고서 -->
-        <div style="display: inline-block;">
+        <br>
+        <div style="display: inline-block; margin-left: 30px;">
             <a id="cstmName"></a> 님, <br>
             - 본 보고서는 귀하가 <a id="dgDate"></a> 진단에 응지문한 결과 결과 해석입니다. <br>
             - 본 진단을 통해서 귀하에 대해 아래와 같은 사항을 발견하였습니다.
         </div> <br> <br>
+        <div id="chart" style="width: 90%; height: 600px; background-color: white; margin: auto;"></div>
         <div id="report" style="width: 90%; margin: auto;"></div>
         <br> <br>
         <!-- DX 자체 진단 결과 보고서 -->
@@ -120,7 +125,7 @@
                         <img style="width: 150px; height: 150px; " src="~/images/findDocument.png">
                     </div>
                     <div id="requestData">
-                        <p style="font-size: 18p; font-weight: 700;">상세 진단 요청</p>
+                        <p style="font-size: 18px; font-weight: 700;">상세 진단 요청</p>
                         전문가 상담 및 상세 진단을 통해 기업별 맞춤 분석을 제공합니다. <br>
                         진단 요청시 회사명과 상세 진단 요청사항을 작성해주시면 더욱 정확한 진단을 제공해드리겠습니다. <br> <br>
                         <a href="#" style="display: inline-block;">
@@ -132,7 +137,6 @@
             </div>
         </div>
         <!-- 체험 진단 다음 -->
-    </div>
     </div>
     <!-- 콘텐츠 -->
 </section>
